--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,7 +1,9 @@
 <div id="post-list">
-    <div *ngFor="let post of posts">
-        {{ post.title }}
-    </div>
+    <ul>
+        <li *ngFor="let post of posts">
+            {{ post.title }}
+        </li>
+    </ul>
 </div>
 
 <app-button (notify)="getPosts()"></app-button>
