Add material design and use them to UI

--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,3 @@
-<button (click)="handleClick()">Fetch Post !</button>
+<button mat-raised-button color="primary" (click)="handleClick()">
+    Get Posts
+</button>
