--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<style>
-
-</style>
-
-<div id="fuck1">
-  POSTER
+<div class="container">
+    <app-title [title]="'Hello Title'"></app-title>
+    <app-card [contentCard]="'Card 1'"></app-card>
+    <app-card [contentCard]="'Card 2'"></app-card>
+    <button mat-raised-button color="primary">Click Me!</button>
 </div>
-
-<app-title></app-title>
-<app-post-list></app-post-list>
-
-<router-outlet></router-outlet>
+<div>
+    <mat-radio-group aria-label="Select an option">
+        <mat-radio-button value="1">Option 1</mat-radio-button>
+        <mat-radio-button value="2">Option 2</mat-radio-button>
+    </mat-radio-group>
+</div>
