--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
-<div class="container">
+<app-container>
     <app-title [title]="'Hello Title'"></app-title>
     <app-card [contentCard]="'Card 1'"></app-card>
     <app-card [contentCard]="'Card 2'"></app-card>
     <button mat-raised-button color="primary">Click Me!</button>
-</div>
-<div>
-    <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1">Option 1</mat-radio-button>
-        <mat-radio-button value="2">Option 2</mat-radio-button>
-    </mat-radio-group>
-</div>
+</app-container>
